--- a/assets/style2.css
+++ b/assets/style2.css
@@ -1,12 +1,13 @@
 /* Set global font and background color */
 :root{
-  --background-color:#404064be;
+  --background-color:#4b4848;
   --title-colors: #000000;
-  --header-font: #000000;
-  --hover-font:#ffffff;
-  --section-background1:#1f2d9456;
+  --header-font: #ffffff;
+  --hover-font:#010101;
+  --section-background1:#00000056;
   --border-colors:#070202;
   }
+
 
   *{
     box-sizing: border-box;
@@ -16,15 +17,16 @@
     margin: 0;
     padding: 0;
   }
-
+/* Styles every header in the main section */
   .main h2 {
     font-size: 40px;
     font-weight: bold;
     color: var(--header-font);
     float:left;
     width: 25%;
+    padding-left: 25px;
   }
-
+/* Styles all the content in the main section */
   .main article{
     font-size: 18px;
     line-height: 1.5;
@@ -33,7 +35,7 @@
   }
 
 
-
+/* Styles the header and provides background */
   .header {
     display: flex;
     justify-content: space-between;
@@ -69,8 +71,6 @@
  .header ul {
     display: flex;
     list-style: none;
-    margin: 0;
-    padding: 0;
   }
   
   .header li {
@@ -82,6 +82,8 @@
     color: var(--title-colors);
     font-size: 16px;
   }
+
+  /* styles when user hovers links */
 
   .header nav a:hover{
   color: rgb(255, 255, 255);
@@ -114,11 +116,21 @@
 
 */
 
-.main img{
-border: solid var(--border-colors);
+.work {
+  background-color: var(--background-color);
+  border: 1px solid black;
+  overflow: auto;
+  padding-bottom: 50px;
 }
 
+/* gives every photo a consistent border */
 
+.main img{
+border: solid var(--border-colors);
+border-radius: 5px;
+}
+
+/* Styles the individual photos as needed */
 .horiseon-webpage{
   width: 50%;
   float: left;
@@ -134,4 +146,113 @@ border: solid var(--border-colors);
   width: 50%;
   float:right;
   margin-top: 5%;
+}
+
+
+/* Creates the glow when hovering work photos */
+.horiseon-webpage,
+.calc-webpage,
+.study-guide {
+  transition: all 0.5s ease-in-out;
+}
+
+.horiseon-webpage:hover,
+.calc-webpage:hover,
+.study-guide:hover {
+  box-shadow: 10px 10px 40px rgb(11, 11, 11), 0 0 15px rgb(238, 231, 231);
+  filter: brightness(75%);
+}
+
+.contact-me{
+    background-color: var(--background-color);
+    border: 1px solid black;
+    overflow: auto;
+}
+
+
+.contact-me .logo ul {
+  display: flex;
+}
+
+
+.contact-me .logo ul img {
+  max-width: 50px;
+  max-height: 50px;
+  list-style: none;
+}
+
+.logo ul{
+  list-style-type:none;
+}
+
+.logo img{
+  margin-right: 20px;
+  float: left;
+  margin-top: 15px;
+}
+
+img:before {
+  content: attr(title);
+  display: block;
+  text-align: center;
+}
+
+/* Adjusts the header to be more visually appealing at 620px */
+@media only screen and (max-width: 620px) {
+  .header {
+    height: 80px;
+    padding: 0 15px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    padding: 15px;
+    text-align: center;
+  }
+
+
+  .header-title {
+    font-size: 32px;
+    margin: 0;
+  }
+
+  .header nav{
+    margin-top: 10px;
+  }
+
+  .header nav ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .header nav ul li {
+    margin: 5px 0;
+  }
+  
+  .header nav ul li a {
+    color: var(--header-font);
+    font-size: 18px;
+  }
+  
+  .header nav button {
+    background-color: transparent;
+    border: none;
+    color: var(--hover-font);
+    font-size: 24px;
+    margin-left: 10px;
+    cursor: pointer;
+  }
+  .header nav ul li a:hover {
+    color:var(--hover-font);
+  }
+}
+
+.resume {
+  background-color: var(--section-background1);
+  border: 1px solid black;
+  overflow: auto;
+  padding-bottom: 0px;
 }
